--- a/myweb/view/index.html
+++ b/myweb/view/index.html
@@ -5,19 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>index</title>
-    <link rel="stylesheet" type="text/css" href="../../websong/less/main.css">
+    <link rel="stylesheet" type="text/css" href="../css/main.css">
 </head>
 
 <body style="background-color: #f2f2f2;">
     <!-- 顶部导航 -->
     <div id="head_tab">
         <a href="#" class="head_left">
-			<img src="img/back.png" alt=""> 
+			<img src="../img/back.png" alt=""> 
 			<!--  返回 -->
 		</a>
         <h2>标签栏标题</h2>
         <a href="#" class="head_right">
-			 <img src="img/in.png" alt="">
+			 <img src="../img/in.png" alt="">
 			<!-- 返回 -->
 		</a>
     </div>
@@ -29,18 +29,19 @@
             <!-- <li><a  h	ref="#">标题一</a></li> -->
         </ul>
     </div>
+
     <!-- 设置和个人中心界面 -->
     <div id="content_list_set">
         <ul>
             <li>
-                <img src="img/back.png">
+                <img src="../img/back.png">
                 <div>修改密码</div>
-                <img src="img/in.png">
+                <img src="../img/in.png">
             </li>
             <li>
-                <img src="img/back.png">
+                <img src="../img/back.png">
                 <div>修改密码</div>
-                <img src="img/in.png">
+                <img src="../img/in.png">
             </li>
         </ul>
     </div>
@@ -49,25 +50,25 @@
         <ul>
             <li class="on">
                 <a href="#">
-					<img src="img/index_on.png">
+					<img src="../img/index_on.png">
 					<div>信息</div>
 				</a>
             </li>
             <li>
                 <a href="#">
-					<img src="img/index_off.png">
+					<img src="../img/index_off.png">
 					<div>信息</div>
 				</a>
             </li>
             <li>
                 <a href="../message/message.html">
-					<img src="img/index_off.png">
+					<img src="../img/index_off.png">
 					<div>信息</div>
 				</a>
             </li>
             <li>
                 <a href="../message/message.html">
-					<img src="img/index_off.png">
+					<img src="../img/index_off.png">
 					<div>信息</div>
 				</a>
             </li>
