--- a/myweb/view/index.html
+++ b/myweb/view/index.html
@@ -45,6 +45,25 @@
             </li>
         </ul>
     </div>
+    <!-- 消息列表界面 -->
+    <div id="message_list">
+        <ul>
+            <li>
+                <div class="title">
+                    <div class="mask color"></div>
+                     <h5>报警信息</h5>
+                </div>
+                <div class="content">2017-5-24 12:22:12，A楼办公区配电箱发生严重漏电报警</div>
+            </li>
+            <li>
+                <div class="title">
+                    <div class="mask color"></div>
+                     <h5>报警信息</h5>
+                </div>
+                <div class="content">2017-5-24 12:22:12，A楼办公区配电箱发生严重漏电报警</div>
+            </li>
+        </ul>
+    </div>
     <!-- 底部导航 -->
     <div id="foot_nav">
         <ul>
